src/test/ui/cross/cross-file-errors/main.stderr
error: expected expression, found reserved identifier `_`
  --> $DIR/underscore.rs:18:9
   |
LL |         _
   |         ^ expected expression
   | 
  ::: $DIR/main.rs:15:5
   |
LL |     underscore!();
   |     -------------- in this macro invocation

error: aborting due to previous error

